--- a/日常笔记/整理过/Android/事件分发源码.md
+++ b/日常笔记/整理过/Android/事件分发源码.md
@@ -462,15 +462,216 @@ public boolean performClick() {
 
 
 
+## 扔物线的源码解析
+
+View.onTouchEvent()
+
+```java
+public boolean onTouchEvent(MotionEvent event) {
+    final float x = event.getX();
+    final float y = event.getY();
+    final int viewFlags = mViewFlags;
+    final int action = event.getAction(); //注意这里没有用getActionMask，因为这里都是单点触控
+
+    final boolean clickable = ((viewFlags & CLICKABLE) == CLICKABLE
+            || (viewFlags & LONG_CLICKABLE) == LONG_CLICKABLE)
+            || (viewFlags & CONTEXT_CLICKABLE) == CONTEXT_CLICKABLE; //可点机或可长按
+
+    if ((viewFlags & ENABLED_MASK) == DISABLED) {  
+        if (action == MotionEvent.ACTION_UP && (mPrivateFlags & PFLAG_PRESSED) != 0) {
+            setPressed(false);
+        }
+        mPrivateFlags3 &= ~PFLAG3_FINGER_DOWN;
+        // A disabled view that is clickable still consumes the touch
+        // events, it just doesn't respond to them.
+        return clickable; // 如果是可点击的，但是被禁用了，则会消费点击事件，不会往下传递了
+    }
+    if (mTouchDelegate != null) {
+        if (mTouchDelegate.onTouchEvent(event)) {  //触摸代理，主要为了按钮太小的时候用的，现在用的少了
+            return true;
+        }
+    }
+
+    if (clickable || (viewFlags & TOOLTIP) == TOOLTIP) {  //是否可点击 || 是否设置了tooltip（长按出来的提示）
+        switch (action) {
+            case MotionEvent.ACTION_DOWN:
+                if (event.getSource() == InputDevice.SOURCE_TOUCHSCREEN) { //是否手指摸到屏幕，交互的用处
+                    mPrivateFlags3 |= PFLAG3_FINGER_DOWN;
+                }
+                mHasPerformedLongPress = false;
+
+                if (!clickable) {     //不可点击的话
+                    checkForLongClick(   //设置长按的等待器，为了长按的
+                            ViewConfiguration.getLongPressTimeout(),
+                            x,
+                            y,
+                            TOUCH_GESTURE_CLASSIFIED__CLASSIFICATION__LONG_PRESS);
+                    break;
+                }
+
+                if (performButtonActionOnTouchDown(event)) { //判断是鼠标右键点击的话
+                    break;
+                }
+
+                // Walk up the hierarchy to determine if we're inside a scrolling container.
+                boolean isInScrollingContainer = isInScrollingContainer(); // 判断是否在滑动空间里面
+
+                // For views inside a scrolling container, delay the pressed feedback for
+                // a short period in case this is a scroll.
+                if (isInScrollingContainer) { //在滑动控件里面的话
+                    mPrivateFlags |= PFLAG_PREPRESSED; //标记了点上去，但是不知道是想滑动还是想点，所以先记下来
+                    if (mPendingCheckForTap == null) {
+                        mPendingCheckForTap = new CheckForTap(); //CheckForTap是个Runnable，里面是按下操作（setPressed和checkForLongClick）
+                    }
+                    mPendingCheckForTap.x = event.getX();
+                    mPendingCheckForTap.y = event.getY();
+                    postDelayed(mPendingCheckForTap, ViewConfiguration.getTapTimeout());// 过一定的时间再执行，因为为了判断是为了滑动还是点击
+                } else { //不在滑动事件里面
+                    // Not inside a scrolling container, so show the feedback right away
+                    setPressed(true, x, y); //设置为按下
+                    checkForLongClick(  //设置长按的等待器 
+                            ViewConfiguration.getLongPressTimeout(),
+                            x,
+                            y,
+                            TOUCH_GESTURE_CLASSIFIED__CLASSIFICATION__LONG_PRESS);
+                }
+                break;
+                
+            case MotionEvent.ACTION_MOVE:
+                if (clickable) {
+                    drawableHotspotChanged(x, y); //按下的波纹效果的中心的改变 
+                }
+
+               ...//可能是一些关于全局手势的逻辑
+
+                // Be lenient about moving outside of buttons
+                if (!pointInView(x, y, touchSlop)) { //如果手点击的地方出界了！ touchSlop就是边界增加的阈值，像羽化一样，增加一点点击的边界
+                    // Outside button
+                    // Remove any future long press/tap checks
+                    //下面是就是清除、归零
+                    removeTapCallback();
+                    removeLongPressCallback();
+                    if ((mPrivateFlags & PFLAG_PRESSED) != 0) {
+                        setPressed(false);
+                    }
+                    mPrivateFlags3 &= ~PFLAG3_FINGER_DOWN;
+                }
+
+                final boolean deepPress =   //大力按下，则直接触发长按
+                        motionClassification == MotionEvent.CLASSIFICATION_DEEP_PRESS;
+                if (deepPress && hasPendingLongPressCallback()) {
+                    // process the long click action immediately
+                    removeLongPressCallback();
+                    checkForLongClick(
+                            0 /* send immediately */,
+                            x,
+                            y,
+                            TOUCH_GESTURE_CLASSIFIED__CLASSIFICATION__DEEP_PRESS);
+                }
+
+                break;
+                
+            case MotionEvent.ACTION_UP:
+                mPrivateFlags3 &= ~PFLAG3_FINGER_DOWN;
+                if ((viewFlags & TOOLTIP) == TOOLTIP) {
+                    handleTooltipUp();   //松手的时候让Tooltip消失（会延时1.5s消失）
+                }
+                if (!clickable) { //不可点击的时候把各种状态全部置空
+                    removeTapCallback();
+                    removeLongPressCallback();
+                    mInContextButtonPress = false;
+                    mHasPerformedLongPress = false;
+                    mIgnoreNextUpEvent = false;
+                    break;
+                }
+              
+                boolean prepressed = (mPrivateFlags & PFLAG_PREPRESSED) != 0;
+                if ((mPrivateFlags & PFLAG_PRESSED) != 0 || prepressed) { //按下或者预按下的情况
+                    // take focus if we don't have it already and we should in
+                    // touch mode.
+                    boolean focusTaken = false;
+                    if (isFocusable() && isFocusableInTouchMode() && !isFocused()) { //判断获取焦点，一般没用，但是EditText有用
+                        focusTaken = requestFocus();  
+                    }
+
+                    if (prepressed) { //预按下
+                        // The button is being released before we actually
+                        // showed it as pressed.  Make it show the pressed
+                        // state now (before scheduling the click) to ensure
+                        // the user sees it.
+                        setPressed(true, x, y);// 就是比如滑动里面按下 100ms内就抬起来了，也算点击了。启动按下效果，下面会有抬起的效果
+                    }
+
+                    if (!mHasPerformedLongPress && !mIgnoreNextUpEvent) { //里面触发点击监听并做各种擦屁股的工作
+                        // This is a tap, so remove the longpress check
+                        removeLongPressCallback();
+
+                        // Only perform take click actions if we were in the pressed state
+                        if (!focusTaken) {
+                            // Use a Runnable and post this rather than calling
+                            // performClick directly. This lets other visual state
+                            // of the view update before click actions start.
+                            if (mPerformClick == null) {
+                                mPerformClick = new PerformClick();
+                            }
+                            if (!post(mPerformClick)) {
+                                performClickInternal(); //触发点击监听
+                            }
+                        }
+                    }
+
+                    if (mUnsetPressedState == null) {
+                        mUnsetPressedState = new UnsetPressedState();
+                    }
+
+                    if (prepressed) {//预按下
+                        postDelayed(mUnsetPressedState,
+                                ViewConfiguration.getPressedStateDuration()); //按下64ms后抬起来
+                    } else if (!post(mUnsetPressedState)) {
+                        // If the post failed, unpress right now
+                        mUnsetPressedState.run();
+                    }
+
+                    removeTapCallback();
+                }
+                mIgnoreNextUpEvent = false;
+                break;
+
+        
+
+            case MotionEvent.ACTION_CANCEL://就是擦屁股工作
+                if (clickable) {
+                    setPressed(false);
+                } 
+                removeTapCallback();
+                removeLongPressCallback();
+                mInContextButtonPress = false;
+                mHasPerformedLongPress = false;
+                mIgnoreNextUpEvent = false;
+                mPrivateFlags3 &= ~PFLAG3_FINGER_DOWN;
+                break;
+
+        }
+
+        return true;
+    }
+
+    return false;
+}
+```
 
 
 
 
 
-
-
-
-
+> 因此，重写layout的时候还需要重写`shouldDelayChildPressedState`，如下所示：
+>
+> ```java
+> 
+> public boolean shouldDelayChildPressedState() {
+>     return true;//返回是否可滑动，false为不可滑动的layout
+> }
+> ```
 
 
 
