--- a/日常笔记/整理过/Android/事件分发源码.md
+++ b/日常笔记/整理过/Android/事件分发源码.md
@@ -61,18 +61,18 @@ public boolean dispatchTouchEvent(MotionEvent ev) {
     if (onFilterTouchEventForSecurity(ev)) {
         final int action = ev.getAction();
         final int actionMasked = action & MotionEvent.ACTION_MASK;
-
+//第一步：
         if (actionMasked == MotionEvent.ACTION_DOWN) {
-            cancelAndClearTouchTargets(ev);
-            resetTouchState(); //可以重置FLAG_DISALLOW_INTERCEPT
+            cancelAndClearTouchTargets(ev); //清空TouchTarget，TouchTarget就是之前获取事件的那个view
+            resetTouchState(); // 重置FLAG_DISALLOW_INTERCEPT，FLAG_DISALLOW_INTERCEPT的作用：事件过程中不进行拦截，看下面
         }
 
+        //第二步：拦截处理
         // 此处判断是否拦截  当事件被子元素处理，则mFirstTouchTarget会指向子元素(mFirstTouchTarget != null)
         final boolean intercepted;
-        if (actionMasked == MotionEvent.ACTION_DOWN
-                || mFirstTouchTarget != null) {  
+        if (actionMasked == MotionEvent.ACTION_DOWN || mFirstTouchTarget != null) {//mFirstTouchTarget != null表示有子view被按下，按下的view保存在链表中，mFirstTouchTarget表示链表第一个
             final boolean disallowIntercept = (mGroupFlags & FLAG_DISALLOW_INTERCEPT) != 0;  //FLAG_DISALLOW_INTERCEPT设置了就表示ViewGroup无法拦截除了ACTION_DOWN以外的其他点击事件，在resetTouchState()中会进行重置
-            if (!disallowIntercept) {
+            if (!disallowIntercept) { //如果子view告诉你不要拦截，这里就为！true，就直接走else，不进行拦截
                 intercepted = onInterceptTouchEvent(ev);
                 ev.setAction(action); // restore action in case it was changed
             } else {
@@ -84,21 +84,9 @@ public boolean dispatchTouchEvent(MotionEvent ev) {
             intercepted = true;
         }
 
-        // If intercepted, start normal event dispatch. Also if there is already
-        // a view that is handling the gesture, do normal event dispatch.
-        if (intercepted || mFirstTouchTarget != null) {
-            ev.setTargetAccessibilityFocus(false);
-        }
-
-        // Check for cancelation.
-        final boolean canceled = resetCancelNextUpFlag(this)
-                || actionMasked == MotionEvent.ACTION_CANCEL;
-
-        // Update list of touch targets for pointer down, if needed.
-        final boolean split = (mGroupFlags & FLAG_SPLIT_MOTION_EVENTS) != 0;
-        TouchTarget newTouchTarget = null;
-        boolean alreadyDispatchedToNewTouchTarget = false;
-        if (!canceled && !intercepted) {
+        ...
+            
+        if (!canceled && !intercepted) {  //不是cancle并且没被拦截
 
             // If the event is targeting accessibility focus we give it to the
             // view that has accessibility focus and if it does not handle it
@@ -109,7 +97,7 @@ public boolean dispatchTouchEvent(MotionEvent ev) {
                     ? findChildWithAccessibilityFocus() : null;
 
             if (actionMasked == MotionEvent.ACTION_DOWN
-                    || (split && actionMasked == MotionEvent.ACTION_POINTER_DOWN)
+                    || (split && actionMasked == MotionEvent.ACTION_POINTER_DOWN) // 多点触控
                     || actionMasked == MotionEvent.ACTION_HOVER_MOVE) {
                 final int actionIndex = ev.getActionIndex(); // always 0 for down
                 final int idBitsToAssign = split ? 1 << ev.getPointerId(actionIndex)
@@ -154,7 +142,7 @@ public boolean dispatchTouchEvent(MotionEvent ev) {
                             continue;
                         }
 
-                        newTouchTarget = getTouchTarget(child);
+                        newTouchTarget = getTouchTarget(child);//判断有没有子view接收
                         if (newTouchTarget != null) {
                             // Child is already receiving touch within its bounds.
                             // Give it the new pointer in addition to the ones it is handling.
@@ -205,15 +193,15 @@ public boolean dispatchTouchEvent(MotionEvent ev) {
         }
 
         // 遍历所有的子元素后事件都没有被合适的处理：1.没有子view. 2.子view处理了但是在onTouchEvent中返回了false
-        if (mFirstTouchTarget == null) {
+        if (mFirstTouchTarget == null) { //没有子view处理事件
             // No touch targets so treat this as an ordinary view.
             handled = dispatchTransformedTouchEvent(ev, canceled, null,
-                    TouchTarget.ALL_POINTER_IDS);  //注意第三个参数为null
+                    TouchTarget.ALL_POINTER_IDS);  // 调用自己的onTouchEvent,注意第三个参数为null
         } else {
             // Dispatch to touch targets, excluding the new touch target if we already
             // dispatched to it.  Cancel touch targets if necessary.
             TouchTarget predecessor = null;
-            TouchTarget target = mFirstTouchTarget;
+            TouchTarget target = mFirstTouchTarget; 
             while (target != null) {
                 final TouchTarget next = target.next;
                 if (alreadyDispatchedToNewTouchTarget && target == newTouchTarget) {
@@ -271,6 +259,26 @@ private TouchTarget addTouchTarget(@NonNull View child, int pointerIdBits) {
     mFirstTouchTarget = target;
     return target;
 }
+
+  @Override
+    public void requestDisallowInterceptTouchEvent(boolean disallowIntercept) {
+
+        if (disallowIntercept == ((mGroupFlags & FLAG_DISALLOW_INTERCEPT) != 0)) {
+            // We're already in this state, assume our ancestors are too
+            return;
+        }
+
+        if (disallowIntercept) {
+            mGroupFlags |= FLAG_DISALLOW_INTERCEPT;
+        } else {
+            mGroupFlags &= ~FLAG_DISALLOW_INTERCEPT;
+        }
+
+        // Pass it up to our parent
+        if (mParent != null) {
+            mParent.requestDisallowInterceptTouchEvent(disallowIntercept);
+        }
+    }
 ```
 
 
@@ -278,6 +286,34 @@ private TouchTarget addTouchTarget(@NonNull View child, int pointerIdBits) {
 
 
 下面分开说：
+
+`requestDisallowInterceptTouchEvent()`作用，在事件的**过程中**（down 和 cancel/up 之间），调用父类的这个方法，父类就不会进行拦截了
+
+> ```java
+> @Override
+> public void requestDisallowInterceptTouchEvent(boolean disallowIntercept) {
+> 
+>     if (disallowIntercept == ((mGroupFlags & FLAG_DISALLOW_INTERCEPT) != 0)) {
+>         // We're already in this state, assume our ancestors are too
+>         return;
+>     }
+> 
+>     if (disallowIntercept) {
+>         mGroupFlags |= FLAG_DISALLOW_INTERCEPT;
+>     } else {
+>         mGroupFlags &= ~FLAG_DISALLOW_INTERCEPT;
+>     }
+> 
+>     // Pass it up to our parent
+>     if (mParent != null) {
+>         mParent.requestDisallowInterceptTouchEvent(disallowIntercept);
+>     }
+> }
+> ```
+>
+> 
+
+
 
 1. 判断是否拦截
 
@@ -411,7 +447,7 @@ public boolean dispatchTouchEvent(MotionEvent event) {
 
 
 
-### OnTouchEvent
+### OnTouchEvent（详情请看下面）
 
 1. 首先判断是否可用，不可用也会消耗点击事件
 
@@ -462,7 +498,7 @@ public boolean performClick() {
 
 
 
-## 扔物线的源码解析
+## View.OnTouchEvent()
 
 View.onTouchEvent()
 
@@ -659,8 +695,6 @@ public boolean onTouchEvent(MotionEvent event) {
     return false;
 }
 ```
-
-
 
 
 
