--- a/日常笔记/整理过/Android/事件分发源码.md
+++ b/日常笔记/整理过/Android/事件分发源码.md
@@ -2,6 +2,20 @@
 
 # 事件分发源码
 
+点击屏幕的时候：
+
+![image-20210809164334577](.\image-20210809164334577.png)
+
+InputManagerService 拿到点击的事件，然后拿给WindowManagerService,
+
+nputManagerService，其实系统在初始化InputManagerService时生成了2个线程：InputReaderThread和InputDispatcherThread，看名字就知道这2个线程一个是负责读取各种事件源，另外一个是负责把事件源派发给别人。
+
+在Android系统中，每块屏幕被抽象成一个DisplayContent对象，内部维护一个WindowList列表对象，用来记录当前屏幕中的所有窗口，因此，可以根据触摸事件的位置及窗口的属性来确定将事件发送到哪个窗口。
+
+在APP端向WMS请求添加窗口的时候，会伴随着Input通道的创建，窗口的添加而创建。
+
+而APP端的监听消息的手段是：将socket添加到Looper线程的epoll数组中去，一有消息到来Looper线程就会被唤醒，并获取事件内容。
+
 ## Activity
 
 首先传递到activity
