--- a/日常笔记/杂七杂八/android屏幕绘制/屏幕绘制.md
+++ b/日常笔记/杂七杂八/android屏幕绘制/屏幕绘制.md
@@ -47,16 +47,292 @@
 
 android4.1出现，为了协同上层UI数据处理，就是管控出发UI处理显示数据的时机
 
-
-
 Choreographer ：扮演 Android 渲染链路中承上启下的角色
 
 * 承上：负责接收和处理 App 的各种更新消息和回调，等到 Vsync 到来的时候统一处理。比如集中处理 Input(主要是 Input 事件的处理) 、Animation(动画相关)、Traversal(包括 measure、layout、draw 等操作) ，判断卡顿掉帧情况，记录 CallBack 耗时等
 * 启下：负责请求和接收 Vsync 信号。接收 Vsync 事件回调(通过 FrameDisplayEventReceiver.onVsync )；请求 Vsync(FrameDisplayEventReceiver.scheduleVsync) .
 
+```java
+void scheduleTraversals() {
+    if (!mTraversalScheduled) {
+        mTraversalScheduled = true;
+        mTraversalBarrier = mHandler.getLooper().getQueue().postSyncBarrier(); //添加一个同步消息屏障
+        mChoreographer.postCallback(
+                Choreographer.CALLBACK_TRAVERSAL, mTraversalRunnable, null);//传入传入mTraversalRunnable，mTraversalRunnable就是屏幕刷新信号来的时候执行run方法
+。	  ....
+    }
+}
+
+
+//其中mTraversalRunnable里面执行了下面的内容：
+ void doTraversal() {
+        if (mTraversalScheduled) {
+            mTraversalScheduled = false;
+            mHandler.getLooper().getQueue().removeSyncBarrier(mTraversalBarrier); //移除同步屏障消息
+
+            performTraversals(); //会调用view的onMeasure,onLayout,onDraw方法
+
+        }
+    }
+
+//下面就就来看下mChoreographer.postCallback什么时候被回调的
 
 
 
+```
+
+刷新流程
+
+> 消息屏障和异步消息
+>
+> 当下一个message是消息屏障的时候，会阻挡住后面的同步消息，把后面所有的异步消息逐一放到前面来进行执行。
 
 
 
+mChoreographer.postCallback什么时候被回调的：先看看Choreographer的构造函数，Choreographer是线程单例的
+
+```java
+class Choreographer {
+
+
+    private Choreographer(Looper looper, int vsyncSource) {
+        mLooper = looper; //获取当前线程的looper
+        mHandler = new FrameHandler(looper); //用该looper创建FrameHandler
+        //开启Vsync的话将通过FrameDisplayEventReceiver接受Vsync脉冲信号
+        mDisplayEventReceiver = USE_VSYNC
+                ? new FrameDisplayEventReceiver(looper, vsyncSource)
+                : null;
+        mLastFrameTimeNanos = Long.MIN_VALUE;
+		//计算一帧的事件
+        mFrameIntervalNanos = (long)(1000000000 / getRefreshRate());
+		//创建一个CallbackQueu数组，默认为4，存放要执行的输入、动画、遍历绘制等任务
+        mCallbackQueues = new CallbackQueue[CALLBACK_LAST + 1];
+        for (int i = 0; i <= CALLBACK_LAST; i++) {
+            mCallbackQueues[i] = new CallbackQueue();
+        }
+        // b/68769804: For low FPS experiments.
+        setFPSDivisor(SystemProperties.getInt(ThreadedRenderer.DEBUG_FPS_DIVISOR, 1));
+    }
+}
+```
+
+下面逐一分析这3个重要对象
+
+FrameHandler:
+
+```java
+private final class FrameHandler extends Handler {
+    public FrameHandler(Looper looper) {
+        super(looper);
+    }
+
+    @Override
+    public void handleMessage(Message msg) {
+        switch (msg.what) {
+            case MSG_DO_FRAME:
+                //执行doFrame，当VSYNC信号来的时候触发
+                doFrame(System.nanoTime(), 0);
+                break;
+            case MSG_DO_SCHEDULE_VSYNC:
+                //申请VSYNC信号
+                doScheduleVsync();
+                break;
+            case MSG_DO_SCHEDULE_CALLBACK:
+                //延迟任务
+                doScheduleCallback(msg.arg1);
+                break;
+        }
+    }
+}
+```
+
+FrameDisplayEventReceiver:
+
+```java
+    private final class FrameDisplayEventReceiver extends DisplayEventReceiver
+            implements Runnable {
+        private boolean mHavePendingVsync;
+        private long mTimestampNanos;
+        private int mFrame;
+
+        public FrameDisplayEventReceiver(Looper looper, int vsyncSource) {
+            super(looper, vsyncSource);
+        }
+
+       public void scheduleVsync() { //申请VSYNC信号
+        if (mReceiverPtr == 0) {
+            Log.w(TAG, "Attempted to schedule a vertical sync pulse but the display event "
+                    + "receiver has already been disposed.");
+        } else {
+            nativeScheduleVsync(mReceiverPtr);//向底层注册一个信号
+        }
+    }
+
+        @Override
+        public void onVsync(long timestampNanos, long physicalDisplayId, int frame) {//用于接收Vsyc信号
+            long now = System.nanoTime();
+    		...
+            mTimestampNanos = timestampNanos;
+            mFrame = frame;
+            Message msg = Message.obtain(mHandler, this); //把自己传进去，自己是个runnable
+            msg.setAsynchronous(true);//设置为异步消息
+            mHandler.sendMessageAtTime(msg, timestampNanos / TimeUtils.NANOS_PER_MS);
+        }
+
+        @Override
+        public void run() {
+            mHavePendingVsync = false;
+            doFrame(mTimestampNanos, mFrame);//最终的调用地方
+        }
+    }
+```
+
+CallbackQueue：
+
+
+
+CallbackQueue里面装着CallbackRecord的链表，用于保存通过postCallback添加的任务，分别是：
+
+* CALLBACK_INPUT:优先级最高，和输入事件处理有关
+* CALLBACK_ANIMATION:优先其次，和Animation的处理相关
+* CALLBACK_TRAVERSAL:优先级最低，和UI绘制任务有关
+* CALLBACK_COMMIT:最后执行，和提交任务有关
+
+收到VSYNC信号时，会先处理高优先级的，再是低优先级的
+
+CallbackRecord是链表
+
+
+
+下面继续看绘制流程，postCallback最终会调用到这里：
+
+```java
+
+private void postCallbackDelayedInternal(int callbackType,
+        Object action, Object token, long delayMillis) {
+
+    synchronized (mLock) {
+        final long now = SystemClock.uptimeMillis();
+        //延迟事件，一般为0
+        final long dueTime = now + delayMillis;
+        //根据任务类型添加到CallbackQueue里面
+        mCallbackQueues[callbackType].addCallbackLocked(dueTime, action, token);
+
+        if (dueTime <= now) {
+            //立即申请VSYNC信号
+            scheduleFrameLocked(now); //这里向底层申请VSYNC信号
+        } else {
+            //最终仍会调用scheduleFrameLocked
+            Message msg = mHandler.obtainMessage(MSG_DO_SCHEDULE_CALLBACK, action);
+            msg.arg1 = callbackType;
+            //异步消息
+            msg.setAsynchronous(true);
+            mHandler.sendMessageAtTime(msg, dueTime);
+        }
+    }
+}
+```
+
+
+
+当下一帧信号来的时候回调onVsync，接到上面执行run()里面的doFrame
+
+```java
+class Choreographer 
+void doFrame(long frameTimeNanos, int frame) {
+    final long startNanos;
+    synchronized (mLock) {
+  		....
+
+        long intendedFrameTimeNanos = frameTimeNanos;
+        startNanos = System.nanoTime();
+        final long jitterNanos = startNanos - frameTimeNanos;
+        if (jitterNanos >= mFrameIntervalNanos) {
+            final long skippedFrames = jitterNanos / mFrameIntervalNanos;
+            if (skippedFrames >= SKIPPED_FRAME_WARNING_LIMIT) {
+                Log.i(TAG, "Skipped " + skippedFrames + " frames!  "
+                        + "The application may be doing too much work on its main thread.");//这里就是那个掉帧Log,掉了30帧就打这个log
+            }
+          
+        }
+
+      ...
+
+    try {
+        Trace.traceBegin(Trace.TRACE_TAG_VIEW, "Choreographer#doFrame");
+        AnimationUtils.lockAnimationClock(frameTimeNanos / TimeUtils.NANOS_PER_MS);
+
+        mFrameInfo.markInputHandlingStart();
+        //执行CALLBACK_INPUT任务
+        doCallbacks(Choreographer.CALLBACK_INPUT, frameTimeNanos);
+
+        mFrameInfo.markAnimationsStart();
+             //执行CALLBACK_ANIMATION任务
+        doCallbacks(Choreographer.CALLBACK_ANIMATION, frameTimeNanos);
+             //执行CALLBACK_INSETS_ANIMATION任务
+        doCallbacks(Choreographer.CALLBACK_INSETS_ANIMATION, frameTimeNanos);
+
+        mFrameInfo.markPerformTraversalsStart();
+             //执行CALLBACK_TRAVERSAL任务
+        doCallbacks(Choreographer.CALLBACK_TRAVERSAL, frameTimeNanos);
+		//CALLBACK_COMMIT任务，下面有实现
+        doCallbacks(Choreographer.CALLBACK_COMMIT, frameTimeNanos);
+    } finally {
+        AnimationUtils.unlockAnimationClock();
+        Trace.traceEnd(Trace.TRACE_TAG_VIEW);
+    }
+
+    if (DEBUG_FRAMES) {
+        final long endNanos = System.nanoTime();
+        Log.d(TAG, "Frame " + frame + ": Finished, took "
+                + (endNanos - startNanos) * 0.000001f + " ms, latency "
+                + (startNanos - frameTimeNanos) * 0.000001f + " ms.");
+    }
+}
+    
+    void doCallbacks(int callbackType, long frameTimeNanos) {
+        CallbackRecord callbacks;
+        synchronized (mLock) {
+        
+            callbacks = mCallbackQueues[callbackType].extractDueCallbacksLocked(
+                    now / TimeUtils.NANOS_PER_MS);//拿到所有满足条件的callback
+       	...
+        try {
+            Trace.traceBegin(Trace.TRACE_TAG_VIEW, CALLBACK_TRACE_TITLES[callbackType]);
+            for (CallbackRecord c = callbacks; c != null; c = c.next) {
+                if (DEBUG_FRAMES) {
+                    Log.d(TAG, "RunCallback: type=" + callbackType
+                            + ", action=" + c.action + ", token=" + c.token
+                            + ", latencyMillis=" + (SystemClock.uptimeMillis() - c.dueTime));
+                }
+                c.run(frameTimeNanos); //执行这个callback的run
+            }
+        }
+        
+    }
+    
+    
+  //最后才执行   Callback#run   
+        
+          public void run(long frameTimeNanos) {
+            if (token == FRAME_CALLBACK_TOKEN) {
+                ((FrameCallback)action).doFrame(frameTimeNanos);
+            } else {
+                ((Runnable)action).run();
+            }
+        }
+  
+        
+```
+
+
+
+触发Vsync: View#invalidate-->ViewRootImpl#scheduledTraversals-->Choreographer#postCallback-->DisplayEventReceiver#scheduleVsync
+
+vsynv回调：DisplayEventReciever#onVsync --> Choreographer#doFrame-->Choreographer#doCallbacks-->CallbackRecord#run -->ViewRootImpl#doTraversal
+
+下面是Choreographer的流程
+
+通过Choreographer监测掉帧，当vsync来的时候回标记一个start_time，执行doFrame的时候标记一个end_time，这两个时间差就是Vsync处理的时延。
+
+![image-20210810230536141](.\image-20210810230536141.png)
