--- a/日常笔记/杂七杂八/android屏幕绘制/屏幕绘制.md
+++ b/日常笔记/杂七杂八/android屏幕绘制/屏幕绘制.md
@@ -58,7 +58,7 @@ void scheduleTraversals() {
         mTraversalScheduled = true;
         mTraversalBarrier = mHandler.getLooper().getQueue().postSyncBarrier(); //添加一个同步消息屏障
         mChoreographer.postCallback(
-                Choreographer.CALLBACK_TRAVERSAL, mTraversalRunnable, null);//传入传入mTraversalRunnable，mTraversalRunnable就是屏幕刷新信号来的时候执行run方法
+                Choreographer.CALLBACK_TRAVERSAL, mTraversalRunnable, null);//传入传入mTraversalRunnable，mTraversalRunnable就是屏幕刷新信号来的时候执行run方法，注意这里是CALLBACK_TRAVERSAL
 。	  ....
     }
 }
@@ -195,7 +195,7 @@ CallbackQueue里面装着CallbackRecord的链表，用于保存通过postCallbac
 
 * CALLBACK_INPUT:优先级最高，和输入事件处理有关
 * CALLBACK_ANIMATION:优先其次，和Animation的处理相关
-* CALLBACK_TRAVERSAL:优先级最低，和UI绘制任务有关
+* CALLBACK_TRAVERSAL:优先级最低，和UI绘制任务有关，这里传入的就是这个
 * CALLBACK_COMMIT:最后执行，和提交任务有关
 
 收到VSYNC信号时，会先处理高优先级的，再是低优先级的
@@ -223,7 +223,7 @@ private void postCallbackDelayedInternal(int callbackType,
             scheduleFrameLocked(now); //这里向底层申请VSYNC信号
         } else {
             //最终仍会调用scheduleFrameLocked
-            Message msg = mHandler.obtainMessage(MSG_DO_SCHEDULE_CALLBACK, action);
+            Message msg = mHandler.obtainMessage(MSG_DO_SCHEDULE_CALLBACK, action);//申请VSYNC信号
             msg.arg1 = callbackType;
             //异步消息
             msg.setAsynchronous(true);
@@ -318,7 +318,7 @@ void doFrame(long frameTimeNanos, int frame) {
             if (token == FRAME_CALLBACK_TOKEN) {
                 ((FrameCallback)action).doFrame(frameTimeNanos);
             } else {
-                ((Runnable)action).run();
+                ((Runnable)action).run();//回调到doTraversal
             }
         }
   
@@ -333,6 +333,15 @@ vsynv回调：DisplayEventReciever#onVsync --> Choreographer#doFrame-->Choreogra
 
 下面是Choreographer的流程
 
+### 如何监测掉帧
+
+1. 通过Choreographer监测掉帧
+
 通过Choreographer监测掉帧，当vsync来的时候回标记一个start_time，执行doFrame的时候标记一个end_time，这两个时间差就是Vsync处理的时延。
 
 ![image-20210810230536141](.\image-20210810230536141.png)
+
+
+
+2. 通过Looper监测掉帧
+
