--- a/日常笔记/面试问题/问题.md
+++ b/日常笔记/面试问题/问题.md
@@ -16,3 +16,17 @@ Sychronize和Reantranlock的区别
 
 livadata源码
 
+线程池的机制（线程异常了怎么办）
+
+线程的await和sleep区别，为什么异常会导致crash
+
+怎么加速编译，multidex
+
+service相关
+
+数据库的迁移怎么做的
+
+okhttp主机名校验
+
+HTTP细节，get,post
+
