--- a/日常笔记/面试问题/面试准备.md
+++ b/日常笔记/面试问题/面试准备.md
@@ -34,8 +34,8 @@
 
 * 问题：
   * 偶先金刚位不显示：数据回来时会存放起来，做过处理回调之后才会执行显示逻辑，显示的时候遗留问题显示不一样导致该问题
-  * 主页掉帧优化：滑动的时候让Fresco不加载图片，多个页面复用一个pool
-* Lab移入：MVVM+kotlin，koin，room，glide,
+  * 主页掉帧优化：滑动的时候让Fresco不加载图片，多个页面复用一个pool，直播发热优化，
+* Lab移入：MVVM+kotlin，koin，room，glide,auto-service
 * 开机启动优化：。。。
 * 自定义上拉加载下拉刷新空间
 
