--- a/日常笔记/面试问题/问题.md
+++ b/日常笔记/面试问题/问题.md
@@ -28,5 +28,16 @@ service相关
 
 okhttp主机名校验
 
-HTTP细节，get,post
+HTTP细节，get,post详细了解！
 
+HTTPS的细节，如何建立连接
+
+各种动画
+
+Glide的缓存机制
+
+Gson的转换：传
+
+binder的原理，AMS部分
+
+数据库底层原理
