--- a/日常笔记/面试问题/问题.md
+++ b/日常笔记/面试问题/问题.md
@@ -41,3 +41,30 @@ Gson的转换：传
 binder的原理，AMS部分
 
 数据库底层原理
+
+数据库底层操作
+
+Disney:
+
+dataBinding的原理
+
+HashSet的原理
+
+美团：
+
+软引用，弱引用等的场景和区别
+
+activity的启动模式的区别
+
+java的内存模型，堆内存，栈内存
+
+GC的时候怎么判断可达
+
+判断可达的时候的元引用是哪些（从哪里开始判断可达）
+
+hash冲突怎么解决
+
+java的接口和抽象类区别
+
+java
+
