--- a/日常笔记/面试问题/问题.md
+++ b/日常笔记/面试问题/问题.md
@@ -71,3 +71,17 @@ TCP为什么三次握手
 android的长连接该怎么做
 
 java虚拟机的堆、栈
+
+
+
+陌陌：
+
+TCP的头里面传了什么东西
+
+hashMap里面数组为什么要2的倍数，hashMap怎么做hash的
+
+TCP简历连接三次握手发的字段
+
+讲一下类加载机制
+
+java中A继承B，A和B都有静态方法，构造函数，加载的时候是怎么加载，顺序是什么  
