--- a/日常笔记/杂七杂八/android屏幕绘制/屏幕绘制.md
+++ b/日常笔记/杂七杂八/android屏幕绘制/屏幕绘制.md
@@ -54,6 +54,8 @@ Choreographer ：扮演 Android 渲染链路中承上启下的角色
 
 ```java
 
+
+class ViewRootImpl {
 void scheduleTraversals() {
     if (!mTraversalScheduled) {
         mTraversalScheduled = true;
@@ -78,7 +80,7 @@ void scheduleTraversals() {
 
 //下面就就来看下mChoreographer.postCallback什么时候被回调的
 
-
+}
 
 ```
 
