--- a/日常笔记/面试问题/问题.md
+++ b/日常笔记/面试问题/问题.md
@@ -89,3 +89,17 @@ java中A继承B，A和B都有静态方法，构造函数，加载的时候是怎
 
 
 需要准备的：Service，activity启动模式
+
+
+
+
+
+BiliBili:
+
+kotlin基础：
+
+协成如何切换，let这些怎么实现的，kotlin的？是怎么实现的，协成怎么切换线程，suspend怎么实现的，kotlin的泛型
+
+长按RecyclerView的事件分发是怎么样的
+
+okhttp的线程池怎么设计的
