--- a/日常笔记/整理过/Android/屏幕绘制.md
+++ b/日常笔记/整理过/Android/屏幕绘制.md
@@ -21,7 +21,7 @@
 
 让绘制和显示各自独立的图像缓冲区。GPU把完成的一帧图像数据写入到Back Buffer，显示器使用Frame Buffer，Back BUffer根据屏幕的刷新将图形数据copy到Frame Buffer。VSYNC信号负责调度从Back Buffer 到 Frame Buffer的交换操作，其实并不是真的copy，只是地址互换
 
-![image-20210511162220060](.\image-20210511162220060.png)
+![image-20210511162220060](J:\Git-JungleLiu\AlogtithmsTraining\日常笔记\杂七杂八\android屏幕绘制\image-20210511162220060.png)
 
 问题：掉帧严重，如果一帧延误了会连续影响后面的几帧
 
@@ -31,7 +31,7 @@
 
 增加一个缓存区，防止双缓存出现的问题。
 
-![image-20210511162531263](.\image-20210511162531263.png)
+![image-20210511162531263](J:\Git-JungleLiu\AlogtithmsTraining\日常笔记\杂七杂八\android屏幕绘制\image-20210511162531263.png)
 
 好处：
 
@@ -53,7 +53,6 @@ Choreographer ：扮演 Android 渲染链路中承上启下的角色
 * 启下：负责请求和接收 Vsync 信号。接收 Vsync 事件回调(通过 FrameDisplayEventReceiver.onVsync )；请求 Vsync(FrameDisplayEventReceiver.scheduleVsync) .
 
 ```java
-
 
 class ViewRootImpl {
 void scheduleTraversals() {
@@ -210,7 +209,6 @@ CallbackRecord是链表
 下面继续看绘制流程，postCallback最终会调用到这里：
 
 ```java
-
 private void postCallbackDelayedInternal(int callbackType,
         Object action, Object token, long delayMillis) {
 
@@ -342,7 +340,7 @@ vsynv回调：DisplayEventReciever#onVsync --> Choreographer#doFrame-->Choreogra
 
 通过Choreographer监测掉帧，当vsync来的时候回标记一个start_time，执行doFrame的时候标记一个end_time，这两个时间差就是Vsync处理的时延。
 
-![image-20210810230536141](.\image-20210810230536141.png)
+![image-20210810230536141](J:\Git-JungleLiu\AlogtithmsTraining\日常笔记\杂七杂八\android屏幕绘制\image-20210810230536141.png)
 
 
 
