--- a/日常笔记/面试问题/问题.md
+++ b/日常笔记/面试问题/问题.md
@@ -107,3 +107,28 @@ okhttp的线程池怎么设计的
 view.post的原理
 
 其他view.post能不能获取其他view 宽高
+
+
+
+大疆：
+
+surface是干什么的？
+
+说说你对windows的理解？说说你对WindowsManager的理解？WindowsManager是干什么的？
+
+android虚拟机dalvik和art的区别，art优化了什么？
+
+dex是干什么的？有什么好处？
+
+
+
+抖音：
+
+怎么持续的启动优化？比如新增了SDK
+
+synchronize对静态方法和对方法进行锁，synchronize和volatile的区别？
+
+synchronize中monitor的原理
+
+监测内存泄漏工具的原理？
+
